--- a/Backend/package.json
+++ b/Backend/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon index.ts",
+    "prod": "tsc -p tsconfig.prod.json && node ./dist/index.js",
     "test": "jest --forceExit"
   },
   "keywords": [],
@@ -32,6 +33,8 @@
     "@types/cors": "^2.8.17",
     "@types/jest": "^29.5.14",
     "@types/supertest": "^6.0.2",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.8",
     "jest": "^29.7.0",
     "nodemon": "^3.1.9",
     "supertest": "^7.0.0",
