deployment for the backend

--- a/Backend/package.json
+++ b/Backend/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon index.ts",
-    "prod": "tsc -p tsconfig.prod.json && node ./dist/index.js",
+    "prod": "cp .envprod .env && tsc -p tsconfig_prod.json && pm2 restart ecosystem.config.js --env production",
     "test": "jest --forceExit"
   },
   "keywords": [],
