host for frontend

--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "prod":"vite preview --port=80",
+    "prod":"vite preview --port=80 --host",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview"
